--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,34 @@
+*{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
 
-/* Your CSS Code here. */
+.container{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+	margin-top:20px;
+	gap:20px;
+}
+
+.moviePic{
+	height:300px;
+	width:250px;
+	opacity:0.5;
+}
+
+img{
+	width:100%;
+	height:100%;
+	object-fit:cover;
+}
+.movieDetail{
+	text-align:center;
+	font-size:15px;
+	position:relative;
+	top:auto;
+	width:auto;
+}
+
